--- a/semirestful_app/templates/add_show.html
+++ b/semirestful_app/templates/add_show.html
@@ -15,6 +15,14 @@
                         <a href="/shows">Go Back</a>
                     </div>
                     
+                    {% if messages %}
+                    <ul class="messages">    
+                    {% for message in messages %}    
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
+                    {% endfor %}
+                    </ul>
+                    {% endif %}
+                    
                     <h1>Add a New Show</h1>
                     <form class="card-body" action="/shows/new" method="post">
                         {% csrf_token %}
